--- a/packages.config
+++ b/packages.config
@@ -2,13 +2,5 @@
 <packages>
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="System.Net.Http" version="2.0.20126.16343" targetFramework="net452" />
-  <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net452" />
-  <package id="xunit" version="2.1.0" targetFramework="net452" />
-  <package id="xunit.abstractions" version="2.0.0" targetFramework="net452" />
-  <package id="xunit.assert" version="2.1.0" targetFramework="net452" />
-  <package id="xunit.core" version="2.1.0" targetFramework="net452" />
-  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net452" />
-  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net452" />
-  <package id="xunit.runner.console" version="2.1.0" targetFramework="net452" />
-  <package id="xunit.runner.wpf" version="1.0.14" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net451" />
 </packages>
